# Car-program2

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: BuyCars.h  FileHandler.h  FileManager.h  Inventory.h  MainMenu.h  Utils.h
include/inventory/: Inventory.h
include/setup/: Bootstrap.h  DefaultInventory.c  DefaultInventory.h  InventoryJSON.h  InventorySetUp.bat  InventorySetUp.sh
include/utils/: FileManager.h  Utils.h
src/: DefaultInventory.c  FileHandler.c  FileManager.c  Inventory.c  MainMenu.c  MainMenu.h  Utils.c  main.c
src/inventory/: Inventory.c
src/setup/: Bootstrap.c  DefaultInventory.c  InventoryJSON.c
src/utils/: FileManager.c  Utils.c
tests/: CheckBackupFilesTest.c  CompareBackupTimeTest.c  DirectoryExistsTest.c
